@@ -4,7 +4,7 @@
 * Extension Manager/Repository config file for ext "fh_debug".
 ***************************************************************/
 
-$EM_CONF[$_EXTKEY] = array(
+$EM_CONF[$_EXTKEY] = [
     'title' => 'Debug generator and Devlog',
     'description' => 'This generates a PHP debug output file. And this is a sys_log and devLog data logger',
     'category' => 'misc',
@@ -16,15 +16,15 @@ $EM_CONF[$_EXTKEY] = array(
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'constraints' => array(
-        'depends' => array(
+    'constraints' => [
+        'depends' => [
             'php' => '7.0.0-7.3.99',
-            'typo3' => '8.7.0-9.5.99',
-        ),
-        'conflicts' => array(
-        ),
-        'suggests' => array(
-        ),
-    ),
-);
+            'typo3' => '8.7.0-10.4.99',
+        ],
+        'conflicts' => [
+        ],
+        'suggests' => [
+        ],
+    ],
+];
 
